<resources>

    <string name="app_name">[#] MatCal</string>
    <string name="vector_chooser">Vector Calculation</string>
    <string name="matrix_chooser">Matrix Calculation</string>
    <string name="dot_product">u · v</string>
    <string name="numComponents">Dimension</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="firstVector">Vector 1</string>
    <string name="secondVector">Vector 2</string>
    <string name="clearInput">Clear</string>
    <string name="addRow">+</string>
    <string name="removeRow">-</string>
    <string name="length">l u l</string>
    <string name="unitVector">unit (u)</string>
    <string name="vectorAddition">u + v</string>
    <string name="crossProduct">u x v</string>
    <string name="scalarMultiplication">c * u</string>
    <string name="angle">∠(u, v)</string>
    <string name="scalarProjection">comp (u, v)</string>
    <string name="vectorProjection">proj (u, v)</string>
    <string name="resultButton">=</string>
    <string name="currCalculation">Current Calculation:</string>
    <string name="ns">Not Selected</string>


</resources>
