<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rostradamus.simplematrixcalculator.ui.VectorCalculationUI">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/numComponentsTextView"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/numComponents"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/componentEditText"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/componentEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/addRow"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/numComponentsTextView"
                app:layout_constraintRight_toLeftOf="@+id/addRow" />

            <Button
                android:id="@+id/addRow"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:onClick="addRow"
                android:text="@string/addRow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/removeRow"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/removeRow"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:onClick="removeRow"
                android:text="@string/removeRow"
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/addRow" />

            <TableLayout
                android:id="@+id/vectorTable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/componentEditText"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            </TableLayout>

            <Button
                android:id="@+id/dot_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:onClick="dotProduct"
                android:text="@string/dot_product"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/outputTable" />

            <Button
                android:id="@+id/norm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="norm"
                android:text="@string/length"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dot_product" />

            <Button
                android:id="@+id/unitVector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="unitVector"
                android:text="@string/unitVector"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/norm" />

            <Button
                android:id="@+id/addition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:onClick="addition"
                android:text="@string/vectorAddition"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crossProduct"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/crossProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:onClick="crossProduct"
                android:text="@string/crossProduct"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/unitVector"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TableLayout
                android:id="@+id/outputTable"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/vectorTable">

            </TableLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
